# boutique-frontend

./: .gitignore  .gitleaks.toml  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSE  drizzle.config.ts  mock.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  proxy.ts  skills-lock.json  vitest.config.mts  vitest.config.ts  vitest.setup.ts
.agents/skills/information-architecture/: SKILL.md
.claude/agents/: api-sync.md  project-manager.md  react-debugger.md
.claude/commands/: release.md
.design/admin-panel/: DESIGN_REVIEW.md
.github/workflows/: ci.yml  deps.yml  nightly-audit.yml  security.yml  unslop.yml
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts
app/(storefront)/: layout.tsx  not-found.tsx  page.tsx
app/(storefront)/account/: page.tsx
app/offline/: page.tsx
backend/: .env.example  .gitignore  .gitleaks.toml  AI_USAGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  SECURITY.md  USER_JOURNEYS.md  compose.yaml  pyproject.toml  scratch.ipynb
backend/.claude/agents/: pr-reviewer.md  tech-debt-assessor.md  tech-debt-verifier.md  test-engineer.md  vuln-analyst.md  vuln-verifier.md
backend/.claude/commands/: tech-debt.md  vuln-scan.md
backend/.claude/skills/loki-logs/: SKILL.md
backend/.claude/skills/silk-debug/: SKILL.md
backend/.claude/skills/update-changelog/: SKILL.md
backend/.claude/skills/whats-new/: SKILL.md
backend/.github/: dependabot.yml
backend/.github/workflows/: ci.yml  deps-noop.yml  deps.yml  nightly-audit.yml  security.yml
backend/api/v1/: router.py
backend/apps/users/: managers.py  models.py  schemas.py
backend/apps/users/controllers/: admin_controller.py  auth_controller.py  users_controller.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_email_alter_user_name.py
backend/config/: celery.py  settings.py  urls.py
backend/docs/: backend-build.md  engineering-notes.md
backend/docs/adr/: 0001-django-neon-system-of-record.md  0002-two-repositories.md  0003-token-custody-in-the-bff.md  0004-email-is-the-login-credential.md  0005-i18n-deferred.md  0006-coverage-is-a-ratchet.md  0007-npm-over-pnpm.md  0008-deploy-config-lives-in-the-repo.md  0009-a-gate-must-be-seen-to-fail.md  0010-no-third-party-code-verbatim.md  0011-src-layout-and-boutique-package.md  index.md
backend/docs/postmortems/: 0001-guardrails-that-checked-nothing.md  index.md
backend/scripts/: check-file-length.sh  check_task_names.py  check_workflow_invariants.py
backend/src/: conftest.py  manage.py
backend/src/api/v1/: api.py  permissions.py
backend/src/apps/products/: api.py
backend/src/apps/users/: managers.py  models.py  schemas.py  services.py  tasks.py
backend/src/apps/users/controllers/: __init__.py  admin_controller.py  auth_controller.py  users_controller.py
backend/src/apps/users/tests/: test_auth.py
backend/src/boutique/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
components/: ProductInquiryCard.tsx  logout-button.tsx
components/admin/: AdminMobileNav.test.tsx  AdminMobileNav.tsx  AdminSidebar.test.tsx  AdminSidebar.tsx  CategoriesTable.test.tsx  CategoriesTable.tsx  CategoryDialog.test.tsx  CategoryDialog.tsx  CategoryFilterManager.tsx  ChatConversation.test.tsx  ChatConversation.tsx  ConfirmDialog.test.tsx  OrdersList.tsx  OrdersRealtime.tsx  PageHeader.test.tsx  ProductCreateForm.test.tsx  ProductCreateForm.tsx  ProductEditor.test.tsx  ProductEditor.tsx  ProductForm.test.tsx  ProductForm.tsx  ProductImageManager.test.tsx  ProductImageManager.tsx  ProductsBulkEdit.tsx  ProductsList.test.tsx  ProductsList.tsx  ProductsTable.test.tsx  ThemeToggle.tsx  VariantBuilder.tsx  VariantManager.test.tsx  VariantManager.tsx  VariantStager.test.tsx  VariantStager.tsx
components/pwa/: EnableNotifications.tsx  ServiceWorkerRegistrar.tsx
components/storefront/: AccountView.tsx  AppliedChips.tsx  BagButton.tsx  BagHeader.tsx  BagList.tsx  CategoryBanner.tsx  ChatPresence.tsx  ColorSquares.tsx  ColorStrip.tsx  CustomerAuthForm.tsx  FavoriteButton.tsx  FeedCard.tsx  FilterSheet.tsx  GridCard.tsx  GuestChat.tsx  ProductDetail.tsx  ProductGallery.tsx  ProductPanel.tsx  ProductSwiper.tsx  QuickAddButton.tsx  SelectionBag.tsx  SelectionList.tsx  SizeSelector.tsx  SortControl.tsx  StoreHeader.tsx  StoreTabBar.tsx
components/ui/: alert.tsx  avatar.tsx  button.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  form.tsx  popover.tsx  sheet.tsx  switch.tsx  table.tsx  textarea.tsx
e2e/: admin-login.spec.ts  admin-product.spec.ts  storefront-browse.spec.ts  storefront-funnel.spec.ts
frontend/: .gitleaks.toml  .prettierignore  CHANGELOG.md  CLAUDE.md  Makefile  eslint.config.mjs  next.config.ts  package-lock.json
frontend/.github/: dependabot.yml
frontend/scripts/: audit-image-alt.mjs  audit-theme-contrast.mjs  check-file-length.sh  check-rsc-token.mjs
frontend/src/: config.ts  proxy.ts
lib/: category-filter-presets.ts  env.ts  variant-presets.ts
lib/actions/: bag.ts  categories.test.ts  categories.ts  category-filters.ts  orders.schema.ts  orders.ts  products.test.ts  products.ts  push.schema.ts  push.ts  selection.ts  variants.schema.ts  variants.ts
lib/auth/: useCustomer.ts
lib/bag/: useBag.tsx
lib/chat/: funnel.ts
lib/db/: queries.ts  rls.test.ts  schema.ts
lib/favorites/: useFavorites.tsx
lib/orders/: order.schema.test.ts  place.ts
lib/push/: send.ts
lib/selection/: useSelection.tsx
lib/storefront/: filters.ts  product-detail.ts
notes/: build-prompts.md  fsd-refactor-completion.md  photo-standards.md  revision.md
public/: sw.js
scripts/: _dl.mjs  _dl2.mjs  _introspect.mjs  _net.mjs  _pex.mjs  _pex2.mjs  _pex3.mjs  _pool.mjs  _probe.mjs  _probe2.mjs  _shot.mjs  apply-rls.mjs  check-licenses.mjs  seed-demo.mjs
src/: config.ts  middleware.ts  proxy.ts
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx
supabase/migrations/: 0000_magical_quasimodo.sql  0001_green_albert_cleary.sql  0002_tired_captain_universe.sql  0003_left_iron_man.sql  0004_silent_groot.sql  0009_lying_korath.sql
supabase/policies/: rls.sql
(+336 files in other folders)
