[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-ninja>=1.6.2",
    "django-ninja-jwt>=5.4.4",
    "django-storages[s3]>=1.14.6",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "ruff>=0.15.20",
]
